[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bptf"
version = "0.1"
description = "A simple Python package for Bayesian Poisson tensor factorization (BPTF)."
authors = [{name = "Aaron Schein"}]

dependencies = [
    "tensorly>=0.8.1",
    "numpy>=2.0.2",
    "scipy>=1.14.1",
    "pandas>=2.2.3",
    "numba>=0.60.0",
    "scikit-learn>=1.5.2",
    "sparse>=0.15.4",
]

[project.optional-dependencies]
dev = [
    "ipython",
    "matplotlib",
    "seaborn",
    "tqdm",
    "jedi",
    "pytest",
]
